Made several tweaks to bounties and lootbags

--- a/config/Lootbags_BagConfig.cfg
+++ b/config/Lootbags_BagConfig.cfg
@@ -13,7 +13,7 @@ $STARTBAG:lootbag_Machine:0
     $BOSSSPAWNWEIGHT:0
     $USEGENERALLOOTSOURCES:false
     $MAXIMUMITEMS:5
-    $MINIMUMITEMS:1
+    $MINIMUMITEMS:3
     $MAXIMUMGENERALLOOTWEIGHT:-1
     $MINIMUMGENERALLOOTWEIGHT:-1
     $PREVENTITEMREPEATS:none
@@ -28,11 +28,11 @@ $STARTBAG:lootbag_Machine:0
 		minecraft:piston:0:8:16:20
 		minecraft:sticky_piston:0:4:8:20
 		buildcrafttransport:pipe_diamond_item:0:2:4:10
-		buildcrafttransport:pipe_iron_item:0:32:64:10
+		buildcrafttransport:pipe_iron_item:0:4:8:10
 		buildcrafttransport:pipe_gold_item:0:32:64:20
-		buildcrafttransport:pipe_clay_item:0:8:16:10
+		buildcrafttransport:pipe_clay_item:0:4:8:10
 		openblocks:tank:0:2:4:20
-		buildcrafttransport:pipe_wood_item:0:2:4:20
+		buildcrafttransport:pipe_wood_item:0:2:4:10
 		buildcraftcore:engine:0:2:4:20
 		storagedrawers:basicdrawers:0:8:16:20:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|96|-32|-56|77|44|73|45|-54|76|-52|97|96|-50|79|-52|102|0|0|-30|-82|6|38|20|0|0|0
 		minecraft:chest:0:4:8:20
@@ -69,10 +69,14 @@ $STARTBAG:lootbag_Machine:0
 		immersiveengineering:conveyor:0:2:4:10:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|96|-32|73|-50|-49|43|75|-83|-52|47|10|-87|44|72|101|-112|-51|-52|-51|77|45|42|-50|44|75|77|-51|75|-49|-52|75|77|45|-54|-52|75|-73|42|46|-56|-55|44|41|73|45|98|0|0|1|-119|-64|28|50|0|0|0
 		immersiveengineering:conveyor:0:2:4:10:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|96|-32|73|-50|-49|43|75|-83|-52|47|10|-87|44|72|101|-112|-55|-52|-51|77|45|42|-50|44|75|77|-51|75|-49|-52|75|77|45|-54|-52|75|-73|74|41|-54|47|40|72|45|98|0|0|-81|-108|105|-68|49|0|0|0
 		immersiveengineering:conveyor:0:2:4:10:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|96|-32|73|-50|-49|43|75|-83|-52|47|10|-87|44|72|101|-112|-55|-52|-51|77|45|42|-50|44|75|77|-51|75|-49|-52|75|77|45|-54|-52|75|-73|74|-83|40|41|74|76|46|97|0|0|-119|-127|16|125|49|0|0|0
-		minecraft:rail:0:32:64:20
-		minecraft:golden_rail:0:16:32:20
+		minecraft:rail:0:32:64:30
+		minecraft:golden_rail:0:16:32:30
 		worsesolars:worse_solar_panel:0:2:4:5
 		immsersiveengineering:metal_device1:3:2:4:5
+		thermalfoundation:material:160:8:16:30
+		immersiveengineering:material:8:2:4:10
+		buildcraftfactory:floodgate:0:2:4:10
+		clickmachine:auto_clicker:0:2:4:10
     $ENDWHITELIST
 $ENDBAG:lootbag_Machine
 $STARTBAG:lootbag_Redstone:1
@@ -89,7 +93,7 @@ $STARTBAG:lootbag_Redstone:1
     $BOSSSPAWNWEIGHT:0
     $USEGENERALLOOTSOURCES:false
     $MAXIMUMITEMS:5
-    $MINIMUMITEMS:1
+    $MINIMUMITEMS:3
     $MAXIMUMGENERALLOOTWEIGHT:40
     $MINIMUMGENERALLOOTWEIGHT:-1
     $PREVENTITEMREPEATS:none
@@ -125,21 +129,21 @@ $STARTBAG:lootbag_Redstone:1
 		randomthings:contactbutton:0:4:8:20
 		projectred-illumination:light_button:0:4:8:20
 		botania:endereyeblock:0:1:1:10
-		projectred-illumination:lamp:29:4:8:20
-		projectred-illumination:lamp:13:4:8:20
-		projectred-illumination:light_button:13:4:8:20
-		projectred-illumination:lantern:13:4:8:20
-		projectred-illumination:inverted_lantern:13:4:8:20
+		projectred-illumination:lamp:29:4:8:5
+		projectred-illumination:lamp:13:4:8:5
+		projectred-illumination:light_button:13:4:8:1
+		projectred-illumination:lantern:13:4:8:5
+		projectred-illumination:inverted_lantern:13:4:8:5
 		projectred-illumination:lamp:27:4:8:20
 		projectred-illumination:lamp:3:4:8:20
-		projectred-illumination:light_button:14:8:1:20
-		projectred-illumination:lantern:14:8:1:20
-		projectred-illumination:inverted_lantern:14:8:1:20
-		projectred-illumination:lamp:30:4:8:20
-		projectred-illumination:lamp:14:4:8:20
-		projectred-illumination:light_button:14:4:8:20
-		projectred-illumination:lantern:14:4:8:20
-		projectred-illumination:inverted_lantern:14:4:8:20
+		projectred-illumination:light_button:14:8:1:1
+		projectred-illumination:lantern:14:8:1:5
+		projectred-illumination:inverted_lantern:14:8:1:5
+		projectred-illumination:lamp:30:4:8:5
+		projectred-illumination:lamp:14:4:8:5
+		projectred-illumination:light_button:14:4:8:1
+		projectred-illumination:lantern:14:4:8:5
+		projectred-illumination:inverted_lantern:14:4:8:5
 		practicallogistics2:node:0:1:2:20
 		practicallogistics2:holographicdisplay:0:1:1:10
 		practicallogistics2:datacable:0:16:32:10
@@ -149,6 +153,8 @@ $STARTBAG:lootbag_Redstone:1
 		practicallogistics2:redstonereceiver:0:1:2:10
 		practicallogistics2:redstoneemitter:0:1:2:10
 		factorytech:inventorysensor:0:1:2:10
+		immersiveengineering:connector:12:4:8:15
+		immersiveengineering:wirecoil:5:4:8:15
     $ENDWHITELIST
 $ENDBAG:lootbag_Redstone
 $STARTBAG:lootbag_Exploration:2
@@ -165,7 +171,7 @@ $STARTBAG:lootbag_Exploration:2
     $BOSSSPAWNWEIGHT:0
     $USEGENERALLOOTSOURCES:false
     $MAXIMUMITEMS:5
-    $MINIMUMITEMS:1
+    $MINIMUMITEMS:3
     $MAXIMUMGENERALLOOTWEIGHT:30
     $MINIMUMGENERALLOOTWEIGHT:-1
     $PREVENTITEMREPEATS:none
@@ -174,28 +180,28 @@ $STARTBAG:lootbag_Exploration:2
         lootbags:itemlootbag:0
     $ENDBLACKLIST
     $STARTWHITELIST
-		minecraft:vine:0:1:2:20
+		minecraft:vine:0:1:2:10
 		minecraft:mycelium:0:1:2:20
 		minecraft:brown_mushroom:0:1:2:20
 		minecraft:red_mushroom:0:1:2:20
 		minecraft:snow:0:2:4:20
-		appliedenergistics2:material:13:1:2:20
-		appliedenergistics2:material:14:1:2:20
-		appliedenergistics2:material:15:1:2:20
-		appliedenergistics2:material:21:1:2:20
-		appliedenergistics2:material:19:1:2:20
-		natura:bonemeal_bag:0:1:2:20
-		natura:seed_bags:0:1:2:20
-		minecraft:pumpkin_seeds:0:2:4:20
-		minecraft:melon_seeds:0:2:4:20
-		minecraft:beetroot_seeds:0:2:4:20
-		natura:seed_bags:1:1:2:20
-		natura:seed_bags:2:1:2:20
-		natura:seed_bags:3:1:2:20
+		appliedenergistics2:material:13:1:1:10
+		appliedenergistics2:material:14:1:1:10
+		appliedenergistics2:material:15:1:1:10
+		appliedenergistics2:material:21:1:1:10
+		appliedenergistics2:material:19:1:1:10
+		natura:bonemeal_bag:0:1:2:30
+		natura:seed_bags:0:1:2:30
+		minecraft:pumpkin_seeds:0:2:4:30
+		minecraft:melon_seeds:0:2:4:30
+		minecraft:beetroot_seeds:0:2:4:30
+		natura:seed_bags:1:1:2:30
+		natura:seed_bags:2:1:2:30
+		natura:seed_bags:3:1:2:30
 		minecraft:glowstone_dust:0:32:64:20
 		minecraft:quartz:0:32:64:20
 		minecraft:netherrack:0:32:64:20
-		minecraft:end_stone:0:32:64:20
+		minecraft:end_stone:0:32:64:10
 		minecraft:sapling:0:2:4:20
 		minecraft:sapling:1:2:4:20
 		minecraft:sapling:2:2:4:20
@@ -203,35 +209,57 @@ $STARTBAG:lootbag_Exploration:2
 		minecraft:sapling:4:2:4:20
 		minecraft:sapling:5:2:4:20
 		minecraft:blaze_rod:0:2:4:20
-		tconstruct:slime_sapling:0:1:2:20
-		tconstruct:slime_sapling:1:1:2:20
-		tconstruct:slime_sapling:2:1:2:20
-		tconstruct:slime_dirt:1:8:16:20
-		tconstruct:slime_dirt:0:8:16:20
-		tconstruct:slime_dirt:2:8:16:20
-		tconstruct:slime_dirt:3:8:16:20
+		tconstruct:slime_sapling:0:1:2:10
+		tconstruct:slime_sapling:1:1:2:10
+		tconstruct:slime_sapling:2:1:2:10
+		tconstruct:slime_dirt:1:8:16:10
+		tconstruct:slime_dirt:0:8:16:10
+		tconstruct:slime_dirt:2:8:16:10
+		tconstruct:slime_dirt:3:8:16:10
 		immersiveengineering:seed:0:8:16:20
-		forestry:beehives:0:1:2:20
-		forestry:beehives:1:1:2:20
-		forestry:beehives:2:1:2:20
-		forestry:beehives:3:1:2:20
-		forestry:beehives:6:1:2:20
-		magicbees:hiveblock:1:1:2:20
-		extrabees:hive:1:1:2:20
-		extrabees:hive:2:1:2:20
-		extrabees:hive:3:1:2:20
-		rustic:beehive:0:1:2:20
-		magicbees:hiveblock:3:1:2:20
-		magicbees:hiveblock:4:1:2:20
-		magicbees:hiveblock:5:1:2:20
-		forestry:beehives:5:1:2:20
-		magicbees:hiveblock:0:1:2:20
-		magicbees:hiveblock:2:1:2:20
-		forestry:beehives:4:1:2:20
-		exnihilocreatio:hive:0:1:2:20
-		exnihilocreatio:hive:1:1:2:20
+		forestry:beehives:0:1:2:5
+		forestry:beehives:1:1:2:5
+		forestry:beehives:2:1:2:5
+		forestry:beehives:3:1:2:5
+		forestry:beehives:6:1:2:5
+		magicbees:hiveblock:1:1:2:5
+		extrabees:hive:1:1:2:5
+		extrabees:hive:2:1:2:5
+		extrabees:hive:3:1:2:5
+		rustic:beehive:0:1:2:5
+		magicbees:hiveblock:3:1:2:5
+		magicbees:hiveblock:4:1:2:5
+		magicbees:hiveblock:5:1:2:5
+		forestry:beehives:5:1:2:5
+		magicbees:hiveblock:0:1:2:5
+		magicbees:hiveblock:2:1:2:5
+		forestry:beehives:4:1:2:5
+		exnihilocreatio:hive:0:1:2:5
+		exnihilocreatio:hive:1:1:2:5
 		minecraft:chorus_flower:0:1:2:20
-		appliedenergistics2:material:19:1:2:20
+		minecraft:sponge:1:4:8:10
+		minecraft:ice:0:8:16:20
+		minecraft:packed_ice:0:8:16:20
+		minecraft:waterlily:0:8:16:10
+		natura:overworld_sapling:0:2:4:10
+		natura:overworld_sapling:1:2:4:10
+		natura:overworld_sapling:2:2:4:10
+		natura:overworld_sapling:3:2:4:10
+		natura:overworld_sapling2:0:2:4:10
+		natura:overworld_sapling2:1:2:4:10
+		natura:overworld_sapling2:2:2:4:10
+		natura:overworld_sapling2:3:2:4:10
+		natura:nether_sapling:0:2:4:10
+		natura:nether_sapling:1:2:4:10
+		natura:nether_sapling:2:2:4:10
+		natura:nether_sapling2:0:2:4:10
+		rustic:sapling:0:2:4:10
+		rustic:sapling:1:2:4:10
+		traverse:red_autumnal_sapling:0:2:4:10
+		traverse:brown_autumnal_sapling:0:2:4:10
+		traverse:orange_autumnal_sapling:0:2:4:10
+		traverse:yellow_autumnal_sapling:0:2:4:10
+		traverse:fir_sapling:0:2:4:10
     $ENDWHITELIST
 $ENDBAG:lootbag_Exploration
 $STARTBAG:lootbag_Magic:3
@@ -248,7 +276,7 @@ $STARTBAG:lootbag_Magic:3
     $MOBSPAWNWEIGHT:0
     $USEGENERALLOOTSOURCES:false
     $MAXIMUMITEMS:5
-    $MINIMUMITEMS:1
+    $MINIMUMITEMS:3
     $MAXIMUMGENERALLOOTWEIGHT:20
     $MINIMUMGENERALLOOTWEIGHT:-1
     $PREVENTITEMREPEATS:none
@@ -267,28 +295,80 @@ $STARTBAG:lootbag_Magic:3
 		xreliquary:mob_ingredient:11:4:8:10
 		xreliquary:mob_ingredient:10:4:8:10
 		xreliquary:mob_ingredient:7:4:8:20
-		botania:overgrowthseed:0:1:2:10
-		botania:rune:3:2:4:10
-		botania:rune:2:2:4:10
-		botania:rune:1:2:4:10
-		botania:rune:0:2:4:10
+		botania:overgrowthseed:0:1:2:20
+		botania:rune:3:2:4:15
+		botania:rune:2:2:4:15
+		botania:rune:1:2:4:15
+		botania:rune:0:2:4:15
 		minecraft:shulker_shell:0:8:16:20
-		minecraft:ender_pearl:0:8:16:20
-		minecraft:prismarine_shard:0:32:64:20
-		minecraft:prismarine_crystals:0:32:64:20
-		thaumcraft:loot_bag:2:4:16:20
-		thaumcraft:loot_bag:1:4:16:20
-		thaumcraft:loot_bag:0:4:16:20
+		minecraft:ender_pearl:0:8:16:30
+		minecraft:prismarine_shard:0:32:64:10
+		minecraft:prismarine_crystals:0:32:64:10
+		thaumcraft:loot_bag:2:4:16:10
+		thaumcraft:loot_bag:1:4:16:10
+		thaumcraft:loot_bag:0:4:16:10
 		thaumcraft:curio:5:1:2:5
-		thaumcraft:shimmerleaf:0:8:16:20
-		thaumcraft:cinderpearl:0:8:16:20
+		thaumcraft:shimmerleaf:0:8:16:10
+		thaumcraft:cinderpearl:0:8:16:10
 		thaumcraft:curio:4:1:2:5
 		thaumcraft:curio:2:1:2:5
-		thaumicbases:quicksilverblock:0:2:4:20
+		thaumicbases:quicksilverblock:0:4:8:20
 		thaumcraft:sapling_greatwood:0:2:4:30
 		thaumcraft:sapling_silverwood:0:2:4:30
-		thaumcraft:amber_block:0:4:8:20
+		thaumcraft:amber_block:0:8:16:20
 		thaumcraft:curio:1:1:2:5
 		randomthings:beans:2:1:1:10
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|97|98|96|-54|76|97|96|98|96|0|0|19|-48|-50|27|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|102|98|96|-54|76|97|96|103|96|0|0|-127|9|-39|-1|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|101|98|96|-54|76|97|16|96|96|0|0|51|-52|-82|-21|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|101|98|96|-54|76|97|16|100|96|0|0|4|-90|108|-22|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|101|98|96|-54|76|97|16|98|96|0|0|93|24|42|-24|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|98|98|96|-54|76|97|16|102|96|0|0|19|105|52|11|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|98|98|96|-54|76|97|16|97|96|0|0|-106|127|123|14|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|102|98|96|-54|76|97|16|101|96|0|0|-97|126|123|-32|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|102|98|96|-54|76|97|16|99|96|0|0|-58|-64|61|-30|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|101|98|96|-54|76|97|80|96|96|0|0|-93|41|-59|-49|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|102|98|96|-54|76|97|80|98|96|0|0|-118|-115|95|-63|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|102|98|96|-54|76|97|80|102|96|0|0|-67|-25|-99|-64|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|101|98|96|-54|76|97|48|96|96|0|0|-45|-118|-29|-45|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|98|98|96|-54|76|97|48|100|96|0|0|-99|-5|-3|48|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|102|98|96|-54|76|97|-80|101|96|0|0|-57|105|37|-42|46|0|0|0
+		quark:ancient_tome:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|-32|100|16|10|46|-55|47|74|77|113|-51|75|-50|72|-52|43|-55|77|-51|43|41|-26|98|96|96|96|100|98|96|-50|41|-53|97|96|102|98|96|-54|76|97|-80|99|96|0|0|-98|-41|99|-44|46|0|0|0
+		quark:rune:0:1:2:5
+		quark:rune:1:1:2:5
+		quark:rune:2:1:2:5
+		quark:rune:3:1:2:5
+		quark:rune:4:1:2:5
+		quark:rune:5:1:2:5
+		quark:rune:6:1:2:5
+		quark:rune:7:1:2:5
+		quark:rune:8:1:2:5
+		quark:rune:9:1:2:5
+		quark:rune:10:1:2:5
+		quark:rune:11:1:2:5
+		quark:rune:12:1:2:5
+		quark:rune:13:1:2:5
+		quark:rune:14:1:2:5
+		quark:rune:15:1:2:5
+		quark:rune:16:1:2:5
+		randomthings:summoningpendulum:0:1:1:5
+		randomthings:lavacharm:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-29|98|96|96|102|96|75|-50|72|44|74|79|101|96|96|-80|98|0|0|-109|43|117|-11|17|0|0|0
+		minecraft:golden_apple:0:1:2:5
+		minecraft:golden_apple:1:1:1:2
+		minecraft:ghast_tear:0:1:2:10
+		botania:manabottle:0:1:1:5
+		botania:blacklotus:0:1:1:5
+		charcoal_pit:aeternalis_fuel:0:1:1:2
+		forestry:bee_drone_ge:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-19|-109|-53|82|-62|48|20|-122|15|82|43|4|93|120|25|47|111|-32|-54|-47|71|96|116|20|22|-78|65|-35|-57|-10|4|50|19|18|38|-119|-105|-6|-12|-74|-112|-98|1|90|-36|-24|-62|69|119|-99|-7|-65|124|109|122|-50|-49|0|-38|16|61|-14|-49|1|0|92|-78|-30|-47|99|23|122|-73|83|107|102|-58|-103|25|58|-106|39|7|29|-120|-98|-121|119|55|112|33|-116|69|-25|109|118|-27|-26|-104|72|116|99|-113|60|21|-36|-7|37|113|-3|3|-47|-126|104|-84|-116|7|40|101|39|-85|40|-90|121|-8|-127|-74|-12|-44|-122|65|-47|34|-59|25|81|74|10|116|115|-82|71|-58|-50|-72|42|45|-37|-14|32|-38|33|-47|57|-127|2|-83|-105|74|-6|108|-35|-76|21|8|-86|54|-87|78|-119|-12|70|-95|-27|58|-63|-111|-47|88|-118|-74|-60|65|19|-111|-26|-112|-72|87|99|-44|-109|125|35|67|53|9|-121|119|-1|-26|27|98|-46|28|-83|-67|-23|-98|43|71|-118|-102|40|28|-33|-5|-51|21|58|53|-93|21|-117|-39|-69|23|-82|-91|82|-68|58|-38|-11|60|-120|-70|80|-35|-39|37|40|-11|100|-79|77|117|59|-69|73|4|25|-85|-111|121|-76|86|122|99|-77|-2|123|-2|7|39|88|-107|109|18|65|-42|35|-39|49|-95|40|4|38|126|117|68|117|89|16|-20|23|-91|-115|7|-56|-107|-97|22|-75|109|1|27|-70|-66|-26|42|-5|-62|20|24|-60|15|-88|-13|-26|54|53|110|106|-36|-44|-8|95|-41|24|-66|1|-43|54|127|-62|-128|7|0|0
+		forestry:bee_princess_ge:0:1:1:5:31|-117|8|0|0|0|0|0|0|0|-19|-109|-53|82|-62|48|20|-122|15|82|43|4|93|120|25|47|111|-32|-54|-47|71|96|116|20|22|-78|65|-35|-57|-10|4|50|19|18|38|-119|-105|-6|-12|-74|-112|-98|1|90|-36|-24|-62|69|119|-99|-7|-65|124|109|122|-50|-49|0|-38|16|61|-14|-49|1|0|92|-78|-30|-47|99|23|122|-73|83|107|102|-58|-103|25|58|-106|39|7|29|-120|-98|-121|119|55|112|33|-116|69|-25|109|118|-27|-26|-104|72|116|99|-113|60|21|-36|-7|37|113|-3|3|-47|-126|104|-84|-116|7|40|101|39|-85|40|-90|121|-8|-127|-74|-12|-44|-122|65|-47|34|-59|25|81|74|10|116|115|-82|71|-58|-50|-72|42|45|-37|-14|32|-38|33|-47|57|-127|2|-83|-105|74|-6|108|-35|-76|21|8|-86|54|-87|78|-119|-12|70|-95|-27|58|-63|-111|-47|88|-118|-74|-60|65|19|-111|-26|-112|-72|87|99|-44|-109|125|35|67|53|9|-121|119|-1|-26|27|98|-46|28|-83|-67|-23|-98|43|71|-118|-102|40|28|-33|-5|-51|21|58|53|-93|21|-117|-39|-69|23|-82|-91|82|-68|58|-38|-11|60|-120|-70|80|-35|-39|37|40|-11|100|-79|77|117|59|-69|73|4|25|-85|-111|121|-76|86|122|99|-77|-2|123|-2|7|39|88|-107|109|18|65|-42|35|-39|49|-95|40|4|38|126|117|68|117|89|16|-20|23|-91|-115|7|-56|-107|-97|22|-75|109|1|27|-70|-66|-26|42|-5|-62|20|24|-60|15|-88|-13|-26|54|53|110|106|-36|-44|-8|95|-41|24|-66|1|-43|54|127|-62|-128|7|0|0
+		quark:crystal:0:4:8:10
+		quark:crystal:1:4:8:10
+		quark:crystal:2:4:8:10
+		quark:crystal:3:4:8:10
+		quark:crystal:4:4:8:10
+		quark:crystal:5:4:8:10
+		quark:crystal:6:4:8:10
+		quark:crystal:7:4:8:10
+		quark:crystal:8:4:8:10
     $ENDWHITELIST
 $ENDBAG:lootbag_Magic
