More bounty tweaks

--- a/config/Lootbags_BagConfig.cfg
+++ b/config/Lootbags_BagConfig.cfg
@@ -77,6 +77,13 @@ $STARTBAG:lootbag_Machine:0
 		immersiveengineering:material:8:2:4:10
 		buildcraftfactory:floodgate:0:2:4:10
 		clickmachine:auto_clicker:0:2:4:10
+		buildcraftsilicon:plug_pulsar:0:2:4:10
+		additionalpipes:pipe_items_gravity_feed:0:2:4:10
+		buildcraftfactory:mining_well:0:2:4:10
+		buildcraftbuilders:quarry:0:1:1:2
+		buildcrafttransport:waterproof:0:32:64:10
+		buildcraftfactory:pump:0:1:1:5
+		buildcraftcore:engine:1:2:4:10
     $ENDWHITELIST
 $ENDBAG:lootbag_Machine
 $STARTBAG:lootbag_Redstone:1
@@ -126,8 +133,8 @@ $STARTBAG:lootbag_Redstone:1
 		randomthings:contactlever:0:4:8:20
 		randomthings:basicredstoneinterface:0:4:8:20
 		randomthings:inventorytester:0:4:8:20
-		randomthings:contactbutton:0:4:8:20
-		projectred-illumination:light_button:0:4:8:20
+		randomthings:contactbutton:0:4:8:10
+		projectred-illumination:light_button:0:4:8:1
 		botania:endereyeblock:0:1:1:10
 		projectred-illumination:lamp:29:4:8:5
 		projectred-illumination:lamp:13:4:8:5
@@ -370,5 +377,20 @@ $STARTBAG:lootbag_Magic:3
 		quark:crystal:6:4:8:10
 		quark:crystal:7:4:8:10
 		quark:crystal:8:4:8:10
+		fancylamps:arcane_gem:0:2:4:10
+		fancylamps:arcane_gem:1:2:4:10
+		fancylamps:arcane_gem:2:2:4:10
+		fancylamps:arcane_gem:3:2:4:10
+		fancylamps:arcane_gem:4:2:4:10
+		fancylamps:obelisk:0:2:4:10
+		fancylamps:obelisk:1:2:4:10
+		fancylamps:obelisk:2:2:4:10
+		fancylamps:obelisk:3:2:4:10
+		fancylamps:obelisk:4:2:4:10
+		fancylamps:lamp:0:2:4:10
+		fancylamps:lamp:1:2:4:10
+		fancylamps:lamp:2:2:4:10
+		fancylamps:lamp:3:2:4:10
+		fancylamps:lamp:4:2:4:10
     $ENDWHITELIST
 $ENDBAG:lootbag_Magic
