Fixed ender folds only giving one core

--- a/config/Ender Folds.cfg
+++ b/config/Ender Folds.cfg
@@ -11,7 +11,7 @@ general {
     B:indestructibleDestinations=true
 
     # Only allows one core to be extracted from a destination.
-    B:unqiueCores=true
+    B:unqiueCores=false
 }
 
 
