Fixed UniDict hiding the wrong brass plate

--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -204,6 +204,7 @@ resources {
     S:ownerOfEveryThing <
         minecraft
         thermalfoundation
+	contenttweaker
 	botania
 	projectred-core
 	nuclearcraft
