--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -617,9 +617,6 @@ fusion {
     # RF/s required to keep an electromagnet active.
     I:fusion_electromagnet_power=4000
 
-    # Use an alternate reactor sound effect?
-    B:fusion_alternate_sound=false
-
     # If true, reactor sound effects will play.
     B:fusion_enable_sound=true
 
@@ -753,6 +750,7 @@ fusion {
         0.001125004921875
         0.001125004921875
      >
+    B:fusion_alternate_sound=false
     I:fusion_update_rate=40
 }
 
@@ -1139,6 +1137,9 @@ processors {
         50
      >
 
+    # Will passive machines that produce materials automatically push to adjacent inventories and fluid handlers?
+    B:passive_push=true
+
     # RF/s required for Cobblestone Generator to run.
     I:cobble_gen_power=0
 
@@ -1408,6 +1409,9 @@ radiation {
     # The amount of borax scrubbers need to be supplied per second.
     I:radiation_scrubber_borax_rate=0
 
+    # The radiation level, as a power of ten, at which the Geiger counter block will emit a full-strength comparator signal.
+    D:radiation_geiger_block_redstone=3.0
+
     # If enabled, radiation shielding attachment recipes will be added for all registered armor pieces.
     B:radiation_shielding_default_recipes=true
 
@@ -1498,6 +1502,15 @@ radiation {
 
     # Number of seconds players will have radiation immunity after death due to radiation.
     D:radiation_death_immunity_time=60.0
+
+    # Lists of potion effects experienced at various percentages of radiation level by players. Format: 'radPercent_potionNameA@strength,potionNameB@strength,...,potionNameZ@strength'.
+    S:radiation_player_debuff_lists <
+        40.0_minecraft:weakness@1
+        55.0_minecraft:weakness@1,minecraft:mining_fatigue@1
+        70.0_minecraft:weakness@2,minecraft:mining_fatigue@1,minecraft:hunger@1
+        80.0_minecraft:weakness@2,minecraft:mining_fatigue@2,minecraft:hunger@1,minecraft:poison@1
+        90.0_minecraft:weakness@3,minecraft:mining_fatigue@3,minecraft:hunger@2,minecraft:poison@1,minecraft:wither@1
+     >
 
     # Lists of potion effects experienced at various percentages of radiation level by passive entities. Format: 'radPercent_potionNameA@strength,potionNameB@strength,...,potionNameZ@strength'.
     S:radiation_passive_debuff_lists <
@@ -1738,6 +1751,9 @@ turbine {
 
     # Maximum mB of fluid processed per tick per rotor blade.
     I:turbine_mb_per_blade=100
+
+    # If true, turbine sound effects will play.
+    B:turbine_enable_sound=true
 }
 
 
