--- a/config/unlimitedchiselworks.cfg
+++ b/config/unlimitedchiselworks.cfg
@@ -38,6 +38,17 @@ enabled {
     B:"quark:soul_sandstone"=true
     B:"quark:stained_planks"=true
     B:"quark:world_stone_bricks"=true
+    B:"railcraft:brick_abyssal"=true
+    B:"railcraft:brick_bleachedbone"=true
+    B:"railcraft:brick_bloodstained"=true
+    B:"railcraft:brick_frostbound"=true
+    B:"railcraft:brick_infernal"=true
+    B:"railcraft:brick_nether"=true
+    B:"railcraft:brick_pearlized"=true
+    B:"railcraft:brick_quarried"=true
+    B:"railcraft:brick_red_nether"=true
+    B:"railcraft:brick_red_sandy"=true
+    B:"railcraft:brick_sandy"=true
     B:"rustic:painted_wood_black"=true
     B:"rustic:painted_wood_blue"=true
     B:"rustic:painted_wood_brown"=true
