--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -93,8 +93,6 @@ materials {
 
     # Set to false to prevent Terrasteel from being loaded [default: true]
     B:"Enable material terrasteel"=true
-
-    # Set to false to prevent Thaumium from being loaded [default: true]
     B:"Enable material thaumium"=false
 
     # Set to false to prevent TNT from being loaded [default: true]
@@ -125,11 +123,17 @@ modules {
     # Integrate with Advanced Rocketry (actually LibVulpes) [default: true]
     B:"Enable Advanced Rocketry integration"=true
 
+    # Integrate with AoA [default: true]
+    B:"Enable AoA support"=true
+
     # Integrate with Applied Energistics 2 [default: true]
     B:"Enable Applied Energistics 2 support"=true
 
     # Integrate with ArmorPlus [default: true]
     B:"Enable ArmorPlus integration"=true
+
+    # Integrate with Astral Sorcery [default: true]
+    B:"Enable Astral Sorcery support"=true
 
     # Integrate with Avaritia [default: true]
     B:"Enable Avaritia support"=true
@@ -150,6 +154,9 @@ modules {
     # Integrate with Environmental Tech [default: true]
     B:"Enable Environmental Tech support"=true
 
+    # Integrate with Erebus [default: true]
+    B:"Enable Erebus support"=true
+
     # Integrate with Galacticraft [default: true]
     B:"Enable Galacticraft support"=true
 
@@ -164,6 +171,9 @@ modules {
 
     # Integrate with Minefactory Reloaded [default: true]
     B:"Enable MFR support"=true
+
+    # Enable the machines from this mod (Centrifuge, etc.) [default: true]
+    B:"Enable Machines addon"=true
 
     # Integrate with Mekanism [default: true]
     B:"Enable Mekanism integration"=true
@@ -189,8 +199,6 @@ modules {
 
     # Integrate with Thermal Foundation [default: true]
     B:"Enable Thermal Foundation integration"=true
-
-    # Integrate with Twilight Forest [default: true]
     B:"Enable Twilight Forest support"=true
 
     # Add features to vanilla Tinkers Construct [default: true]
@@ -223,6 +231,17 @@ tweaks {
     # Add smelting recipes for Redstone, Glowstone, and Ender pearl (only if Thermal Foundation is loaded) [default: true]
     B:"Add smeltery recipes for Redstone, Glowstone, and Ender pearl"=true
     B:"Alloy Dark Steel in smeltery"=true
+
+    # Enter in the format inputFluid:outputFluid1;outputFluid2;outputFluid3 [default: ]
+    S:"Centrifuge blacklist" <
+     >
+
+    # Energy consumed by centrifuge per millibucket [range: 0 ~ 2147483647, default: 5]
+    I:"Centrifuge energy per mB"=5
+
+    # Force-load these traits (as a fully-qualified class name; e.g. landmaster.plustic.traits.Global) without the required mods themselves being loaded [default: ]
+    S:"Force load traits" <
+     >
 
     # If Natural Pledge is loaded:
     # If true: replace Natural Pledge Botania TiC materials with PlusTiC ones;
