Fixed Extra Trees having no trees

--- a/config/forestry/extratrees/modules.cfg
+++ b/config/forestry/extratrees/modules.cfg
@@ -38,7 +38,7 @@ modules {
 
     # Adds wood stairs, fences, planks, logs and doors.
     # Dependencies: [ extratrees:extratrees.core ]
-    B:extratrees.wood=false
+    B:extratrees.wood=true
 }
 
 
