--- a/config/InvTweaks/InvTweaks.cfg
+++ b/config/InvTweaks/InvTweaks.cfg
@@ -1,10 +1,10 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Thu Aug 01 13:15:29 CDT 2019
+#Sun Oct 27 20:47:57 CDT 2019
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
-enableAutoRefill=false
+enableAutoRefill=true
 autoRefillBeforeBreak=false
 autoRefillDamageThreshhold=5
 enableSounds=true
