--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -10,6 +10,15 @@ world-1082264202 {
 }
 
 
+world-1083745879 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=coa
+    B:overlayEnabled=true
+}
+
+
 world-1195922161 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -22,6 +31,22 @@ world-1256614609 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=grap
+    B:overlayEnabled=true
+}
+
+
+world-1364632533 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=solar
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -312,6 +337,15 @@ world-253263514 {
 }
 
 
+world-273732323 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-289497002 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -452,6 +486,15 @@ world-751429545 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-758113961 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=ely
     B:overlayEnabled=true
 }
 
@@ -667,7 +710,7 @@ world1596008077 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=@immersivee
+    S:filterText=searin
     B:overlayEnabled=true
 }
 
@@ -802,6 +845,15 @@ world2090571502 {
 }
 
 
+world2090932770 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@contentt ore
+    B:overlayEnabled=true
+}
+
+
 world210322435 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
@@ -918,9 +970,9 @@ world388728918 {
 
 world472321213 {
     B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=true
+    B:cheatItemsEnabled=false
     B:editEnabled=false
-    S:filterText=
+    S:filterText=dispe
     B:overlayEnabled=true
 }
 
@@ -1034,15 +1086,9 @@ world83573204 {
 
 world848214854 {
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=chees
-
-    # Show the list of ingredients next to open GUIs.
+    S:filterText=diamond ches
     B:overlayEnabled=true
 }
 
