--- a/config/mystcraft/core.cfg
+++ b/config/mystcraft/core.cfg
@@ -27,6 +27,9 @@ general {
     B:crafting.inkvial.enabled=true
     B:crafting.lectern.enabled=true
     B:crafting.linkbook.enabled=true
+    B:crafting.linkeffects.disarm.enabled=true
+    B:crafting.linkeffects.generate_platform.enabled=true
+    B:crafting.linkeffects.intra_linking.enabled=true
     B:crafting.portfolio.enabled=true
     B:crafting.receptacle.enabled=true
     B:generation.villageDeskGen=true
