--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -1205,7 +1205,7 @@ processors {
 
 radiation {
     # Will nuclear radiation exist in the world? Note that the game will require a restart for radiation-related items to be shown in JEI after enabling this feature.
-    B:radiation_enabled=false
+    B:radiation_enabled=true
 
     # The rate at which radiation in the world updates.
     I:radiation_world_tick_rate=20
