Add LV relay and liquid hopper to machine bag

--- a/config/Lootbags_BagConfig.cfg
+++ b/config/Lootbags_BagConfig.cfg
@@ -73,17 +73,19 @@ $STARTBAG:lootbag_Machine:0
 		minecraft:golden_rail:0:16:32:30
 		worsesolars:worse_solar_panel:0:2:4:5
 		immsersiveengineering:metal_device1:3:2:4:5
-		thermalfoundation:material:160:8:16:300
+		thermalfoundation:material:160:8:16:100
 		immersiveengineering:material:8:2:4:10
 		buildcraftfactory:floodgate:0:2:4:10
 		clickmachine:auto_clicker:0:2:4:10
-		buildcraftsilicon:plug_pulsar:0:2:4:10
+		buildcraftsilicon:plug_pulsar:0:2:4:25
 		additionalpipes:pipe_items_gravity_feed:0:2:4:10
 		buildcraftfactory:mining_well:0:2:4:10
 		buildcraftbuilders:quarry:0:1:1:2
 		buildcrafttransport:waterproof:0:32:64:10
 		buildcraftfactory:pump:0:1:1:5
 		buildcraftcore:engine:1:2:4:10
+		pneumaticcraft:liquid_hopper:0:2:4:10
+		immersiveengineering:connector:8:16:4:20
     $ENDWHITELIST
 $ENDBAG:lootbag_Machine
 $STARTBAG:lootbag_Redstone:1
@@ -283,7 +285,7 @@ $STARTBAG:lootbag_Exploration:2
 		botania:rune:1:2:4:15
 		botania:rune:0:2:4:15
 		minecraft:shulker_shell:0:8:16:20
-		minecraft:ender_pearl:0:8:16:300
+		minecraft:ender_pearl:0:8:16:100
 		minecraft:prismarine_shard:0:32:64:10
 		minecraft:prismarine_crystals:0:32:64:10
 		thaumcraft:loot_bag:2:4:16:10
