Fixed Scannable config

--- a/config/scannable.cfg
+++ b/config/scannable.cfg
@@ -136,17 +136,17 @@ general {
         oreInfusedEarth=0x49B45A
         oreInfusedOrder=0x9FF2DE
         oreInfusedEntropy=0x545476
-        oreEtherium=5A9AA2
-        oreCertusQuartz=9AC3F4
-        oreNickel=CCC994
-        oreResonating=C94430
-        oreOsmium=9EA9BA
-        oreCertusQuartzCharged=6194CE
-        oreResonatingCrystal=AA2920
-        oreThorium=212121
-        oreMagnesium=DBA8D9
-        oreLithium=C9C9C9
-        oreBoron=595959
+        oreEtherium=0x5A9AA2
+        oreCertusQuartz=0x9AC3F4
+        oreNickel=0xCCC994
+        oreResonating=0xC94430
+        oreOsmium=0x9EA9BA
+        oreCertusQuartzCharged=0x6194CE
+        oreResonatingCrystal=0xAA2920
+        oreThorium=0x212121
+        oreMagnesium=0xDBA8D9
+        oreLithium=0xC9C9C9
+        oreBoron=0x595959
      >
 
     # Ore dictionary entries considered common ores, requiring the common ore scanner module.
