Disabled Quark's jasper/slate generation

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1993,7 +1993,7 @@ world {
             I:"Cluster Rarity"=9
 
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             # Setting this to true will make the 'Cluster Rarity' feature be X per chunk rather than 1 per X chunks [default: false]
             B:"Invert Cluster Rarity"=false
@@ -2030,7 +2030,7 @@ world {
             I:"Cluster Rarity"=9
 
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             # Setting this to true will make the 'Cluster Rarity' feature be X per chunk rather than 1 per X chunks [default: false]
             B:"Invert Cluster Rarity"=false
