Fixed bronze ingots being craftable

--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -252,6 +252,7 @@ resources {
 	"unidict:gearnickel_x1_shape. a aba a "
 	"unidict:gearelectrum_x9_shape. a aba a "
 	"unidict:gearelectrum_x1_shape. a aba a "
+	"unidict:ingotbronze_x1_shape.aaaabaaaa"
      >
 
     # resources to be black-listed.
