--- a/config/stevescarts.cfg
+++ b/config/stevescarts.cfg
@@ -34,6 +34,7 @@ enabledmodules {
     B:EggBasket=true
     B:Enchanter=true
     B:EntityDetector_Animal=true
+    B:EntityDetector_Bat=true
     B:EntityDetector_Monster=true
     B:EntityDetector_Player=true
     B:EntityDetector_Villager=true
@@ -73,6 +74,7 @@ enabledmodules {
     B:Projectile_Egg=true
     B:Projectile_FireCharge=false
     B:Projectile_Potion=true
+    B:Pumpkinchariot=true
     B:Railer=true
     B:ReinforcedHull=true
     B:Seat=true
@@ -89,6 +91,7 @@ enabledmodules {
     B:TopTank=true
     B:TorchPlacer=true
     B:TrackRemover=true
+    B:Trick-or-TreatCakeServer=true
     B:WoodenHull=true
 }
 
