--- a/config/unlimitedchiselworks.cfg
+++ b/config/unlimitedchiselworks.cfg
@@ -15,6 +15,12 @@ enabled {
     B:"botania:quartztypemana"=true
     B:"botania:quartztypered"=true
     B:"botania:quartztypesunny"=true
+    B:"extratrees:planks.0"=true
+    B:"extratrees:planks.1"=true
+    B:"extratrees:planks.2"=true
+    B:"extratrees:planks.fireproof.0"=true
+    B:"extratrees:planks.fireproof.1"=true
+    B:"extratrees:planks.fireproof.2"=true
     B:"forestry:ash_brick"=true
     B:"forestry:planks.0"=true
     B:"forestry:planks.1"=true
