--- a/config/apatheticmobs.cfg
+++ b/config/apatheticmobs.cfg
@@ -1,16 +1,5 @@
 # Configuration file
 
-compatibility {
-    B:gaiaGuardian=false
-}
-
-
-ender_dragon {
-    B:dragonfly=false
-    B:dragonsit=false
-}
-
-
 general {
 
     "basic rules" {
@@ -23,7 +12,7 @@ general {
         B:"Blacklist or Whitelist Option"=true
 
         # If true, mod will only work on listed difficulties; if false, it will always work.
-        B:"Difficulty Lock Option"=false
+        B:"Difficulty Lock Option"=true
 
         # List of entities that will attack the player if blacklist is enabled.
         S:"Excluded Mobs" <
@@ -63,7 +52,7 @@ general {
         B:"Dragon Sitting Attack Option"=true
 
         # If true, Gaia Guardian will send attacks at you and the magic floor will exist. If false, it will only spawn mobs.
-        B:"Gaia Attack Option"=false
+        B:"Gaia Attack Option"=true
 
         # If true, any mobs with the flag 'isBoss' will be ignored by this mod. So Eldritch Guardian, for example.
         B:"General Boss Option"=true
@@ -72,31 +61,9 @@ general {
         B:"Wither Attack Option"=true
 
         # If true, wither will take revenge.
-        B:"Wither Revenge Option"=false
+        B:"Wither Revenge Option"=true
     }
 
-}
-
-
-rules {
-    B:blacklist=true
-    S:difficulties <
-        easy
-     >
-    B:difficultyLock=true
-    S:exclusions <
-        minecraft:cow
-     >
-    S:inclusions <
-        minecraft:zombie
-     >
-    B:revenge=true
-}
-
-
-wither {
-    B:witherAttacks=false
-    B:witherRevenge=false
 }
 
 
