--- a/config/scannable.cfg
+++ b/config/scannable.cfg
@@ -147,6 +147,7 @@ general {
         oreMagnesium=0xDBA8D9
         oreLithium=0xC9C9C9
         oreBoron=0x595959
+        oreOilSource=0xD2B48C
      >
 
     # Ore dictionary entries considered common ores, requiring the common ore scanner module.
@@ -167,6 +168,7 @@ general {
         oreResonating
         oreOsmium
         oreNickel
+        oreOilSource
      >
 
     # Ore dictionary names of ores considered 'rare', requiring the rare ore scanner module.
