Added Custom Portals

--- a/config/randomportals/randomportals.cfg
+++ b/config/randomportals/randomportals.cfg
@@ -18,12 +18,12 @@ client {
 
 
 ##########################################################################################################
-# endportals
+# endPortals
 #--------------------------------------------------------------------------------------------------------#
 # Options related to End portals.
 ##########################################################################################################
 
-endportals {
+endPortals {
     # Enables vertical End portals and a variety of End portal tweaks.
     # Default: true
     B:enabled=true
@@ -47,6 +47,10 @@ endportals {
 ##########################################################################################################
 
 misc {
+    # Whether to add an item for the End gateway.
+    # Default: true
+    B:addEndGatewayItem=true
+
     # Whether to trigger advancements related to portals.
     # Default: true
     B:advancements=true
@@ -58,12 +62,16 @@ misc {
 
 
 ##########################################################################################################
-# netherportals
+# netherPortals
 #--------------------------------------------------------------------------------------------------------#
-# Options related to Nether portals.
+# Options related to Nether portals and custom portal types.
 ##########################################################################################################
 
-netherportals {
+netherPortals {
+    # Whether all entities can cause portal generation when teleported through a portal.
+    # Default: false
+    B:allEntitiesCanCausePortalGeneration=false
+
     # Whether to enable colored portals.
     # Default: true
     B:coloredPortals=true
@@ -102,10 +110,27 @@ netherportals {
     # Default: true
     B:portalsContributeToBeaconColors=true
 
+    # The radius in which a suitable location to generate a portal should be searched for upon teleportation through a portal.
+    # Min: 1
+    # Max: 2147483647
+    # Default: 16
+    I:portalGenerationLocationSearchRadius=16
+
+    # The radius in which existing portals in the destination dimension should be searched for upon teleportation through a portal.
+    # Min: 1
+    # Max: 2147483647
+    # Default: 128
+    I:portalSearchRadius=128
+
     # Whether user placed portals inside the frame of the same type as the portal should be replaced upon activation.
     # Leaving this false is recommended for building purposes, as it allows players to more easily create colored patterns in portals.
     # Default: false
     B:replaceUserPlacedPortalsOnActivation=false
+
+    # Whether portal ambient sounds should be server-sided instead of client-sided as in vanilla.
+    # This must be enabled for custom portal ambient sounds to work.
+    # Default: true
+    B:serverSidedAmbientSounds=true
 }
 
 
