--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -36,17 +36,10 @@ world-1256614609 {
 
 
 world-1364632533 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=solar
-
-    # Show the list of ingredients next to open GUIs.
+    S:filterText=gunpo
     B:overlayEnabled=true
 }
 
@@ -339,9 +332,9 @@ world-253263514 {
 
 world-273732323 {
     B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=false
+    B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=
+    S:filterText=sw
     B:overlayEnabled=true
 }
 
@@ -382,6 +375,15 @@ world-45927067 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-463349047 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@industr
     B:overlayEnabled=true
 }
 
@@ -494,7 +496,7 @@ world-758113961 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=ely
+    S:filterText=servo
     B:overlayEnabled=true
 }
 
@@ -621,6 +623,22 @@ world1262624706 {
 }
 
 
+world1314892008 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=@
+
+    # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
+}
+
+
 world1337475327 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -657,6 +675,15 @@ world1409989879 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=anv
+    B:overlayEnabled=true
+}
+
+
+world1412520121 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@scan
     B:overlayEnabled=true
 }
 
