--- a/config/stevescarts.cfg
+++ b/config/stevescarts.cfg
@@ -43,12 +43,14 @@ enabledmodules {
     B:ExtremeMelter=true
     B:Fertilizer=true
     B:Fireworkdisplay=true
+    B:Freezer=true
     B:FrontChest=true
     B:FrontTank=true
     B:GalgadorianDrill=true
     B:GalgadorianFarmer=true
     B:GalgadorianHull=true
     B:GalgadorianWoodCutter=true
+    B:GiftStorage=true
     B:HardenedDrill=true
     B:HardenedWoodCutter=true
     B:HeightController=true
@@ -74,6 +76,7 @@ enabledmodules {
     B:Projectile_Egg=true
     B:Projectile_FireCharge=false
     B:Projectile_Potion=true
+    B:Projectile_Snowball=true
     B:Pumpkinchariot=true
     B:Railer=true
     B:ReinforcedHull=true
